--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,20 @@ jobs:
       run: |
         export PYTHONPATH=$(pwd)
         pytest tests/
+  update-jira:
+    if: github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Update Jira Issue status
+      run: |
+        ISSUE_KEY=$(echo "${{ github.event.pull_request.title }}" | grep -oE '[A-Z]+-[0-9]+')
+        echo "Found issue key: $ISSUE_KEY"
+
+        curl -u "${{ secrets.JIRA_EMAIL }}:${{ secrets.JIRA_API_TOKEN }}" \
+          -X POST \
+          --header 'Content-Type: application/json' \
+          --data '{
+            "transition": { "id": "31" }
+          }' \
+          https://hautq2004-1742971230689.atlassian.net/rest/api/3/issue/$ISSUE_KEY/transitions
